header z-index fixed

--- a/src/app/admin/layouts/header/header.component.css
+++ b/src/app/admin/layouts/header/header.component.css
@@ -1,7 +1,11 @@
-.profile-dropdown-list{
+.admin-navbar {
+    z-index: 100000;
+}
+
+.profile-dropdown-list {
     @apply absolute top-9 -right-3 mt-2 flex w-60 flex-col gap-3 rounded-xl bg-slate-100 border border-slate-500/30 p-4 shadow-lg transition ease-in-out duration-150
 }
 
-.profile-dropdown-list[aria-expanded=false]{
+.profile-dropdown-list[aria-expanded=false] {
     @apply invisible scale-90 opacity-0
 }
